Thu May  6 22:09:29 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tkutil.c (get_eval_string_core): bug fix. [ruby-dev:23466]

Thu May  6 14:22:29 2004  why the lucky stiff  <why@ruby-lang.org>

	* lib/yaml/rubytypes.rb (to_yaml): added instance variable handling
	  for Ranges, Strings, Structs, Regexps.

	* lib/yaml/rubytypes.rb (to_yaml_fold): new method for setting a 
	  String's flow style.

	* lib/yaml.rb (YAML::object_maker): now uses Object.allocate.

	* ext/syck/gram.c: fixed transfer methods on structs, broke it
	  last commit.

Thu May  6 14:38:02  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (rb_push_glob): simplified code (not change behavior)

Thu May  6 13:32:44 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: get rid of side effect of Config.expand, patched by
	  <tttt01@infoseek.jp>  (ruby-bugs:PR#597)

Thu May  6 11:40:28 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (string): accept NIL.

	* lib/net/imap.rb (body_type_basic): allow body-fields omissions.

Thu May  6 01:59:04 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb (Generators::HtmlMethod::params):
	  Don't include the &block parameter if we have explicit
	  yield parameters.

Wed May  5 03:52:31 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/ring.rb: use recv instead of recvfrom.

Wed May  5 00:38:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/gserver.rb: documented
	* lib/xmlrpc/README.txt: introduced for documentation purposes

Mon May  3 09:47:24 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::parse_method_or_yield_parameters):
	  Fix parsing bug if yield called within 1 line block

Sun May  2 21:56:48 2004  Minero Aoki  <aamine@loveruby.net>

	* test/fileutils/test_fileutils.rb (rm_f, rm_r): test :force flag.

Sun May  2 01:04:38 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib, ext/tk: renewal Ruby/Tk
